added operation tovars

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       <h3>📦 Склад</h3>
       <div>
         <span class="me-3">👤 Адміністратор</span>
+        <a href="/operations" class="btn btn-info me-2">📊 Операції</a>
         <button class="btn btn-success me-2" id="addBtn">➕ Додати товар</button>
         <button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button>
       </div>
