--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
       <div>
         <span class="me-3">👤 Адміністратор</span>
         <a href="/operations" class="btn btn-info me-2">📊 Операції</a>
+        <a href="/movement" class="btn btn-secondary me-2">📈 Рух товарів</a>
         <button class="btn btn-success me-2" id="addBtn">➕ Додати товар</button>
         <button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button>
       </div>
