--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,8 @@
       <h3>📦 Склад</h3>
       <div>
         <span class="me-3">👤 Адміністратор</span>
-        <a href="/operations" class="btn btn-info me-2">📊 Операції</a>
+        <a href="/dashboard" class="btn btn-info me-2">📊 Дажборд</a>
+        <a href="/operations" class="btn btn-info me-2">♻️ Операції</a>
         <a href="/movement" class="btn btn-secondary me-2">📈 Рух товарів</a>
         <button class="btn btn-success me-2" id="addBtn">➕ Додати товар</button>
         <button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button>
