--- a/templates/index.html
+++ b/templates/index.html
@@ -4,19 +4,37 @@
   <meta charset="UTF-8">
   <title>Склад</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/menu.css" rel="stylesheet">
 </head>
 <body class="p-4">
+
+  <!-- кнопка, яка рухається -->
+  <button class="toggle-btn" id="menuBtn" onclick="toggleSidebar()">☰</button>
+
+  <!-- панель -->
+  <div class="sidebar" id="sidebar">
+      <ul>
+        <li><a href="/" class="btn btn-primary me-2">📦 Склад</a></li>
+        <li><a href="/relocation" class="btn btn-primary me-2">🔁 Переміщення</a></li>
+        <li><a href="/stock" class="btn btn-secondary me-2">📊 Залишки</a></li>
+        <li><a href="/movement" class="btn btn-warning me-2">📈 Рух товарів</a></li>
+        <li><a href="/operations" class="btn btn-info me-2">📋 Операції</a></li>
+        <li><a href="/dashboard" class="btn btn-success me-2">📊 Дашборд</a></li>
+        <li><a href="/movement" class="btn btn-secondary me-2">📈 Рух товарів</a></li>
+        <li><a href="/operations" class="btn btn-info me-2">♻️ Операції</a></li>
+        <li><button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button></li>
+      </ul>
+  </div>
+
+
 
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h3>📦 Склад</h3>
       <div>
         <span class="me-3">👤 Адміністратор</span>
-        <a href="/dashboard" class="btn btn-info me-2">📊 Дажборд</a>
-        <a href="/operations" class="btn btn-info me-2">♻️ Операції</a>
-        <a href="/movement" class="btn btn-secondary me-2">📈 Рух товарів</a>
         <button class="btn btn-success me-2" id="addBtn">➕ Додати товар</button>
-        <button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button>
+
       </div>
     </div>
 
@@ -138,6 +156,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/static/script.js"></script>
+  <script src="/static/menu.js"></script>
 
 </body>
 </html>
