--- a/static/menu.css
+++ b/static/menu.css
@@ -3,7 +3,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 250px;
+        width: 300px;
         height: 100vh;
         background: #222;
         color: white;
@@ -11,6 +11,9 @@
         transition: 0.3s ease;
         z-index: 1500;
         padding-top: 40px;
+
+        overflow-y: auto;
+
     }
 
     .sidebar.open {
@@ -49,7 +52,7 @@
     }
 
     .toggle-btn.open {
-        left: 250px; /* ширина меню */
+        left: 300px; /* ширина меню */
     }
 
     .content {
