--- a/templates/stock.html
+++ b/templates/stock.html
@@ -25,9 +25,12 @@
 
   <!-- панель -->
   <div class="sidebar" id="sidebar">
-      <ul>
+    <ul>
+        <li><span class="me-3">👤 Адміністратор</span></li>
         <li><a href="/" class="btn btn-primary me-2">📦 Склад</a></li>
-        <li><a href="/relocation" class="btn btn-primary me-2">🔁 Переміщення</a></li>
+        <li><a href="/suppliers" class="btn btn-success me-2">🏢 Постачальники</a></li>
+        <li><a href="/clients" class="btn btn-info me-2">👥 Клієнти</a></li>
+        <li><a href="/relocation" class="btn btn-primary me-2">🔁 Переміщення товарів</a></li>
         <li><a href="/stock" class="btn btn-secondary me-2">📊 Залишки</a></li>
         <li><a href="/movement" class="btn btn-warning me-2">📈 Рух товарів</a></li>
         <li><a href="/operations" class="btn btn-info me-2">📋 Операції</a></li>
@@ -35,8 +38,8 @@
         <li><a href="/movement" class="btn btn-secondary me-2">📈 Рух товарів</a></li>
         <li><a href="/operations" class="btn btn-info me-2">♻️ Операції</a></li>
         <li><button class="btn btn-danger" id="logoutBtn">🚪 Вийти</button></li>
-      </ul>
-  </div>
+    </ul>
+</div>
 
 
   <div class="container">
@@ -105,6 +108,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/static/stock.js"></script>
   <script src="/static/menu.js"></script>
-
+    <script src="/static/logout.js"></script>
 </body>
 </html>
